--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ skipsdist = True
 
 [testenv]
 commands =
-    pytest
+    pytest --cov=src
 deps =
     pytest
     freezegun
+    pytest-cov
     -rrequirements.txt
