--- a/serverless.yml
+++ b/serverless.yml
@@ -64,6 +64,7 @@ provider:
     BOT_TOKEN: ${env:BOT_TOKEN}
     UPDATE_CENTRES_TIME: ${self:custom.update_centres_time.${opt:stage, self:provider.stage}}
     PARAM_MIN_YEARS: ${self:custom.min_years_param.${opt:stage, self:provider.stage}}
+    STAGE: ${opt:stage}
 
 functions:
   message_handler:
