Coveralls under maintenance

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,11 @@ jobs:
     - name: Run tox
       run: |
         tox
-    - name: Update Coverage report
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        coveralls --service=github
+#    - name: Update Coverage report
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      run: |
+#        coveralls --service=github
     - name: Download Node
       uses: actions/setup-node@v1
       with:
