--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Download Node
       uses: actions/setup-node@v1
       with:
-        node-version: "10.x"
+        node-version: "14.x"
     - name: Install Serverless Framework
       run: npm install -g serverless
     - name: Install serverless dependencies
@@ -47,10 +47,10 @@ jobs:
       env:
         BOT_TOKEN: ${{ secrets.BOT_TOKEN_DEV }}
         NOTIFICATIONS_EMAIL: ${{ secrets.NOTIFICATIONS_EMAIL }}
-      run: serverless deploy -v -s dev
+      run: serverless deploy -s dev
     - name: Deploy to AWS [PRO]
       if: github.ref == 'refs/heads/main'
       env:
         BOT_TOKEN: ${{ secrets.BOT_TOKEN_PRO }}
         NOTIFICATIONS_EMAIL: ${{ secrets.NOTIFICATIONS_EMAIL }}
-      run: serverless deploy -v -s pro
+      run: serverless deploy -s pro
